# license-generator

./: Cargo.toml
.github/workflows/: release.yml
src/: helpers.rs  license.rs  main.rs
