[package]
name = "gen-license"
version = "0.3.0-alpha.0"
edition = "2021"
repository = "https://github.com/rithulkamesh/gen-license"
authors=["Rithul Kamesh <hi@rithul.dev>", "Shoubhit Dash <shoubhit2005@gmail.com>"]
description = "A very easy-to-use and fast command line license generator!"
license = "MIT"

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
time = "0.3.34"
